# image-edit

./: .gitignore  Analys-txt.ipynb  Analys.ipynb  CMakeLists.txt  README.md  tmp
src/: BMPProcess.cpp  BMPProcess.h  DPCM.cpp  DPCM.h  bi_color_bmp.h  bmp.cpp  bmp.h  correlation.cpp  entropy.cpp  entropy.h  histogram.cpp  histogram.h  main.cpp  rgb.cpp  transform.cpp  ycbcr.cpp
